--- a/v2/assets/css/style.css
+++ b/v2/assets/css/style.css
@@ -5,12 +5,13 @@
 .paragraph-title-list {
     min-width: 300px;
     overflow-y: auto;
-    height: calc(100vh - 110px);
+    height: calc(100vh - 100px);
+    box-shadow: grey 0 0 10px;
 }
 
-.paragraph-title-list a {
-    font-size: 1.5em;
-    padding: 10px;
+.paragraph-title-list .position-sticky {
+    background-color: white;
+    box-shadow: grey 0 0 10px;
 }
 
 .paragraph-list {
@@ -114,7 +115,7 @@ body *:not(.book *):not(.fa) {
     height: 100px;
 }
 
-button {
+button, .nav-list a {
     color: white;
     background-color: #012863;
     overflow: hidden;
@@ -122,6 +123,10 @@ button {
     border-radius: 20px !important;
     height: 40px;
     width: 150px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .navbar-brand {
@@ -166,4 +171,24 @@ button {
 
 .welcome>div>p:last-child {
     font-size: 22px;
+}
+
+.spinner {
+    width: 40px;
+    height: 40px;
+    border: 5px solid #ccc;
+    border-top-color: #012863; /* Blue top */
+    border-radius: 50%;
+    animation: spin 0.5s linear infinite;
+    margin: 50px auto; /* Center horizontally */
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
