Add Our Mission page

--- a/src/assets/books/style/font.scss
+++ b/src/assets/books/style/font.scss
@@ -4,30 +4,30 @@
   font-family: "PalatinoLTStd";
   font-weight: 400;
   font-style: normal;
-  src: url(./font/PalatinoLTStd-Roman.eot);
-  src: local('PalatinoLTStd-Roman'), url(./font/PalatinoLTStd-Roman.eot?#iefix) format("embedded-opentype"), url(./font/PalatinoLTStd-Roman.woff) format("woff"), url(./font/PalatinoLTStd-Roman.otf) format("opentype"), url(./font/PalatinoLTStd-Roman.ttf) format("truetype"), url(./font/PalatinoLTStd-Roman.svg#PalatinoLTStd-Roman) format("svg")
+  src: url(~@/assets/books/style/font/PalatinoLTStd-Roman.eot);
+  src: local('PalatinoLTStd-Roman'), url(~@/assets/books/style/font/PalatinoLTStd-Roman.eot?#iefix) format("embedded-opentype"), url(~@/assets/books/style/font/PalatinoLTStd-Roman.woff) format("woff"), url(~@/assets/books/style/font/PalatinoLTStd-Roman.otf) format("opentype"), url(~@/assets/books/style/font/PalatinoLTStd-Roman.ttf) format("truetype"), url(~@/assets/books/style/font/PalatinoLTStd-Roman.svg#PalatinoLTStd-Roman) format("svg")
 }
 
 @font-face {
   font-family: "PalatinoLTStd";
   font-weight: 700;
   font-style: normal;
-  src: url(./font/PalatinoLTStd-Bold.eot);
-  src: local('PalatinoLTStd-Roman'), url(./font/PalatinoLTStd-Bold.eot?#iefix) format("embedded-opentype"), url(./font/PalatinoLTStd-Bold.woff) format("woff"), url(./font/PalatinoLTStd-Bold.otf) format("opentype"), url(./font/PalatinoLTStd-Bold.ttf) format("truetype"), url(./font/PalatinoLTStd-Bold.svg#PalatinoLTStd-Bold) format("svg")
+  src: url(~@/assets/books/style/font/PalatinoLTStd-Bold.eot);
+  src: local('PalatinoLTStd-Roman'), url(~@/assets/books/style/font/PalatinoLTStd-Bold.eot?#iefix) format("embedded-opentype"), url(~@/assets/books/style/font/PalatinoLTStd-Bold.woff) format("woff"), url(~@/assets/books/style/font/PalatinoLTStd-Bold.otf) format("opentype"), url(~@/assets/books/style/font/PalatinoLTStd-Bold.ttf) format("truetype"), url(~@/assets/books/style/font/PalatinoLTStd-Bold.svg#PalatinoLTStd-Bold) format("svg")
 }
 
 @font-face {
   font-family: "PalatinoLTStd";
   font-weight: 400;
   font-style: italic;
-  src: url(./font/PalatinoLTStd-Italic.eot);
-  src: local('PalatinoLTStd-Roman'), url(./font/PalatinoLTStd-Italic.eot?#iefix) format("embedded-opentype"), url(./font/PalatinoLTStd-Italic.woff) format("woff"), url(./font/PalatinoLTStd-Italic.otf) format("opentype"), url(./font/PalatinoLTStd-Italic.ttf) format("truetype"), url(./font/PalatinoLTStd-Italic.svg#PalatinoLTStd-Italic) format("svg")
+  src: url(~@/assets/books/style/font/PalatinoLTStd-Italic.eot);
+  src: local('PalatinoLTStd-Roman'), url(~@/assets/books/style/font/PalatinoLTStd-Italic.eot?#iefix) format("embedded-opentype"), url(~@/assets/books/style/font/PalatinoLTStd-Italic.woff) format("woff"), url(~@/assets/books/style/font/PalatinoLTStd-Italic.otf) format("opentype"), url(~@/assets/books/style/font/PalatinoLTStd-Italic.ttf) format("truetype"), url(~@/assets/books/style/font/PalatinoLTStd-Italic.svg#PalatinoLTStd-Italic) format("svg")
 }
 
 @font-face {
   font-family: "PalatinoLTStd";
   font-weight: 700;
   font-style: italic;
-  src: url(./font/PalatinoLTStd-BoldItalic.eot);
-  src: local('PalatinoLTStd-Roman'), url(./font/PalatinoLTStd-BoldItalic.eot?#iefix) format("embedded-opentype"), url(./font/PalatinoLTStd-BoldItalic.woff) format("woff"), url(./font/PalatinoLTStd-BoldItalic.otf) format("opentype"), url(./font/PalatinoLTStd-BoldItalic.ttf) format("truetype"), url(./font/PalatinoLTStd-BoldItalic.svg#PalatinoLTStd-BoldItalic) format("svg")
+  src: url(~@/assets/books/style/font/PalatinoLTStd-BoldItalic.eot);
+  src: local('PalatinoLTStd-Roman'), url(~@/assets/books/style/font/PalatinoLTStd-BoldItalic.eot?#iefix) format("embedded-opentype"), url(~@/assets/books/style/font/PalatinoLTStd-BoldItalic.woff) format("woff"), url(~@/assets/books/style/font/PalatinoLTStd-BoldItalic.otf) format("opentype"), url(~@/assets/books/style/font/PalatinoLTStd-BoldItalic.ttf) format("truetype"), url(~@/assets/books/style/font/PalatinoLTStd-BoldItalic.svg#PalatinoLTStd-BoldItalic) format("svg")
 }
