--- a/src/assets/css/book.scss
+++ b/src/assets/css/book.scss
@@ -19,15 +19,17 @@
 
     .paragraph-section {
       box-shadow: grey 0 0 10px;
-      padding: 50px;
       max-width: 800px;
 
       @include sm {
-        margin: 20px 0;
+        padding: 20px;
+        margin: 10px 0;
         width: 95vw;
+        font-size: 80%;
       }
 
       @include md-lg {
+        padding: 50px;
         margin: 20px 50px;
         width: 85%;
       }
@@ -40,7 +42,6 @@
 
   .paragraph-title-list {
     overflow-y: auto;
-    width: 25%;
     
     &:first-of-type {
       background-color: white;
@@ -49,11 +50,27 @@
     @include sm {
       height: 100vh;
       padding-bottom: 100px;
+      display: flex;
+      position: fixed;
+      z-index: 3;
+      transition: transform 0.3s ease;
+      width: 70%;
+
+      &.mob-hide {
+        transform: translateX(-100%);
+      }
+
+      &.mob-show {
+        transform: translateX(0);
+        box-shadow: grey 0 0 10px;
+      }
     }
 
     @include md-lg {
       min-width: 300px;
       box-shadow: grey 0 5px 10px;
+      display: flex;
+      width: 25%;
     }
 
     .position-sticky {
@@ -80,6 +97,15 @@
 }
 
 .list-button {
-  bottom: 76px;
+  top: 50dvh;
+  left: 0;
+  background-color: white;
+  color: $theme-color-primary;
+  border: none;
+  font-size: 26px;
+  padding: 10px !important;
+  box-shadow: black 0 0 10px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
