--- a/src/assets/css/book.scss
+++ b/src/assets/css/book.scss
@@ -3,17 +3,17 @@
 .book {
   .paragraph-list,
   .paragraph-title-list {
-    @include md-lg {
+    @include lg {
       height: calc(100vh - 100px);
     }
   }
 
   .paragraph-list {
-    @include sm {
+    @include sm-md {
       height: auto;
     }
 
-    @include md-lg {
+    @include lg {
       overflow-y: auto;
     }
 
@@ -21,14 +21,14 @@
       box-shadow: grey 0 0 10px;
       max-width: 800px;
 
-      @include sm {
+      @include sm-md {
         padding: 20px;
         margin: 10px 0;
         width: 95vw;
         font-size: 80%;
       }
 
-      @include md-lg {
+      @include lg {
         padding: 50px;
         margin: 20px 50px;
         width: 85%;
@@ -36,6 +36,7 @@
 
       .paragraph {
         padding: 10px;
+        text-align: justify;
       }
     }
   }
@@ -47,7 +48,7 @@
       background-color: white;
     }
 
-    @include sm {
+    @include sm-md {
       height: 100vh;
       padding-bottom: 100px;
       display: flex;
@@ -66,7 +67,7 @@
       }
     }
 
-    @include md-lg {
+    @include lg {
       min-width: 300px;
       box-shadow: grey 0 5px 10px;
       display: flex;
@@ -103,9 +104,10 @@
   color: $theme-color-primary;
   border: none;
   font-size: 26px;
-  padding: 10px !important;
+  width: 40px;
+  height: 50px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
   box-shadow: black 0 0 10px;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
 }
 
